# NLP-2024W

./: Efficient_NLP_Filip_Mieszkowski_Stanislaw_Kurzatkowski.pptx  README.md
projects/: README.md  (+1 more)
projects/PoCs/Focus-AI_Smagowski_Kraszewski/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
projects/PoCs/Focus-AI_Smagowski_Kraszewski/chrome_extension/extension/: content.js  manifest.json  popup.html  popup.js
projects/PoCs/Focus-AI_Smagowski_Kraszewski/chrome_extension/fastapi_ai_backend/: app.py  pyproject.toml  run.sh
projects/PoCs/Focus-AI_Smagowski_Kraszewski/data/Bands/: 1  11  12  13  14  15  17  18  19  2  20  21  22  23  24  25  26  27  28  3  30  32  33  34  35  36  37  38  39  41  42  43  44  45  46  47  49  5  50  51  (+10 more)
projects/PoCs/Focus-AI_Smagowski_Kraszewski/data/BioMedical/: 0-143302914  1  1-1027100827  10  10-1636505764  100-2078917053  101-1953210302  102-45248011  103-1099951567  104-433832350  105-2018585307  106-1703199216  107-618906479  108-573714703  109-766270699  11-980071615  110-275680090  112-1583583926  113-1723401032  114-1965443329  115-1098183682  116-980071615  117-1011597961  118-1315461275  119-157584038  12-1011597961  120-2078917053  121-143302914  122-1953210302  123-755253631  124-2002600785  125-1405390230  126-45248011  127-1099951567  129-2018585307  13  13-643279273  131-813528929  133-618906479  134-573714703  (+75 more)
projects/PoCs/Focus-AI_Smagowski_Kraszewski/data/Goats/: 1  10  12  13  14  15  16  2  20  21  23  24  25  26  27  28  29  3  30  35  36  37  38  39  40  42  44  45  46  47  49  5  50  51  52  53  54  55  56  58  (+18 more)
projects/PoCs/Focus-AI_Smagowski_Kraszewski/data/Sheep/: 1  10  11  12  13  14  15  16  17  18  19  2  21  22  24  25  26  27  28  29  30  33  34  35  37  38  39  4  41  42  43  45  46  47  48  5  51  52  53  54  (+17 more)
projects/PoCs/Focus-AI_Smagowski_Kraszewski/processed-data/: classification_results.csv  labeled_files.csv
projects/PoCs/Focus-AI_Smagowski_Kraszewski/prompt_results/: all_results_20241210_214330.csv
projects/PoCs/Focus-AI_Smagowski_Kraszewski/scripts/: create_dataset.py  dataset_analysis.py  generate-labels.py  get_one_label.py  prompt_metrics.py  prompt_testing.py
projects/final/FocusAI_Smagowski_Kraszewski/repository/: pyproject.toml
projects/final/FocusAI_Smagowski_Kraszewski/repository/processed-data/: ready_dataset.csv
projects/final/FocusAI_Smagowski_Kraszewski/repository/prompt_results/: all_results_20250122_031114.csv
(+912 files in other folders)
