[tool.poetry]
name = "nlp-focus-ai"
version = "0.1.0"
description = ""
authors = ["Szymon <smagowski.szymon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
html2markdown = "^0.1.7"
matplotlib = "^3.9.3"
langgraph = "^0.2.56"
langchain-openai = "^0.2.12"
pydantic-settings = "^2.6.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
